--- a/riddle.html
+++ b/riddle.html
@@ -135,7 +135,19 @@
 <footer class="container-fluid">
   <p>Footer Text</p>
 </footer>
-	
+<script type="text/javascript" src="/hilitor.js">
+</script>
+
+<script type="text/javascript">
+  var myHilitor;
+  document.addEventListener("DOMContentLoaded", function(e) {
+    myHilitor = new Hilitor2("playground");
+    myHilitor.setMatchType("left");
+  }, false);
+  document.getElementById("keywords").addEventListener("keyup", function(e) {
+    myHilitor.apply(this.value);
+  }, false);
+</script>	
 
 </body>
 </html>
