--- a/riddle.html
+++ b/riddle.html
@@ -133,7 +133,7 @@
   <br><br><br><br>
   
 <footer class="container-fluid">
-  <p>Footer Text</p>
+  <p>Illusions</p>
 </footer>
 <script type="text/javascript" src="/hilitor.js">
 </script>
