--- a/riddle.html
+++ b/riddle.html
@@ -148,7 +148,9 @@
     myHilitor.apply(this.value);
   }, false);
 </script>
-
+	    
+<script src="/application.js">
+</script>
 
 </body>
 </html>
