--- a/riddle.html
+++ b/riddle.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
   <style>
 	  body {
-		  font-family: 'Itim', cursive;
+		  font-family: 'Shadows Into Light', cursive;
 		  font-size:20px;
 		  background: #00BCD4;
 	  }
