--- a/riddle.html
+++ b/riddle.html
@@ -149,6 +149,7 @@
   }, false);
 </script>
 	    
+<!-- Load the application script, which will save data to our Firebase app when we click the button. -->
 <script src="/application.js">
 </script>
 
